<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/mn.skyware.daavkaguitar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_back" >

    <RelativeLayout
        android:id="@+id/det_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header"
        android:orientation="horizontal" >

        <mn.skyware.view.AutofitTextView
            android:id="@+id/det_song_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/fav_lin"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <mn.skyware.view.AutofitTextView
            android:id="@+id/det_art_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/det_song_name"
             android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_below="@+id/det_song_name"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:id="@+id/fav_lin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/sep" />

            <ImageView
                android:id="@+id/det_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/favwhite" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/det_tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/det_head"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        android:background="@drawable/song_det_grey_round"
      >

        <LinearLayout
            android:id="@+id/det_tsohilt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/tsohilteye" />

            <mn.skyware.view.AutofitTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:text="@string/tsohiltharah"
                android:textColor="@color/pop_back"
                app:minTextSize="7sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/det_scroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical" >

            <mn.skyware.view.AutofitTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/scrollspeed"
                android:textColor="@color/pop_back"
                app:minTextSize="7sp" />

            <Button
                android:id="@+id/scrollMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round"
                android:text="-"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <Button
                android:id="@+id/scrollPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/round"
                android:text="+"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/scrollPlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/round" />

                <ImageView
                    android:id="@+id/scrollPlayImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="2dp"
                    android:src="@drawable/blackplay" >
                </ImageView>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/main_circle" />

    <ScrollView
        android:id="@+id/song_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/youtube_fragment"
        android:layout_below="@+id/det_tool"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:scrollbars="none"
        android:splitMotionEvents="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/det_lin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:orientation="vertical" >
            </LinearLayout>

            <Button
                android:id="@+id/viewYoutube"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/det_lin"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:background="@drawable/strum_but"
                android:text="@string/viewYoutube"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/youtube_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_above="@+id/zoomControl"
        android:visibility="gone" />

    <ZoomControls
        android:id="@+id/zoomControl"
        android:layout_width="wrap_content"
        
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" />

</RelativeLayout>